--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^4.23.2",
-		"@emoji-mart/data": "^1.1.2",
-		"@emoji-mart/react": "^1.1.1",
 		"@hookform/resolvers": "^3.3.0",
 		"@livekit/components-react": "^1.1.4",
 		"@livekit/components-styles": "^1.0.6",
@@ -38,7 +36,7 @@
 		"clsx": "^2.0.0",
 		"cmdk": "^0.2.0",
 		"date-fns": "^2.30.0",
-		"emoji-mart": "^5.5.2",
+		"emoji-picker-react": "^4.7.0",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.12",
 		"livekit-client": "^1.13.0",
